--- a/project2.html
+++ b/project2.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project2</title>
+    <link rel="stylesheet" href="project2.css">
 </head>
 <body>
+    <div class="bt">
     <h1>Butterfly</h1>
+</div>
+<div class="about">
+    <h2> Butterfly News</h2>
+    <p>Numbers of species. Due to their bright colors and visits to flowers, butterflies are the most familiar of insects to humans. There are about 17,500 species of butterflies in the world, and around 750 species in the United States.
+
+        Distinctive characteristics. Butterflies (and moths) are the only group of insects that have scales covering their wings, although some butterflies have reduced scales. They differ from other insects also by their ability to coil up their proboscis.
+        
+        Immatures. Caterpillars are the names given to the larvae of both butterflies and moths. They are usually very distinctive, and in some cases may be identified more easily than the adults. When they are developing, their skin may be shed four or more times, with each molt often changing the coloration and appearance of the caterpillar. They eat voraciously to transform plant material into tissues that they will need for metamorphosis.
+        
+        Plant associations. Butterflies are commonly associated with plants, and the relationship is sometimes complex. Immatures, with few exceptions, eat plants, and therefore may be considered harmful to the plants. However, butterflies are very important to many plants that are dependent upon flower-visiting insects for cross-pollination. Most butterfly caterpillars eat one, or sometimes several, related species of plants. Usually the choice is made by the adult female when depositing eggs. Adults usually feed on nectar from flowers of plants, although many butterflies feed instead on rotting fruit, dung, etc., especially in the tropics.</p>
+</div>
+<div class="footer">
+   <div>
+    <h3>More butterfly</h3>
+   </div> 
+
+<div>
+    <img src="img/bt3.jpg" alt="butterfly">
+</div>
+<div>
+    <img src="img/bt4.jpg" alt="">
+</div>
+<div>
+    <img src="img/bt3.jpg" alt="">
+</div>
+<div>
+    <img src="img/bt4.jpg" alt="">
+</div>
+</div>
 </body>
 </html>
